// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-1"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        1
      </div>
    </div>
    <div
      class="t-col t-col-1"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        1
      </div>
    </div>
    <div
      class="t-col t-col-1"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        1
      </div>
    </div>
    <div
      class="t-col t-col-1"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        1
      </div>
    </div>
    <div
      class="t-col t-col-1"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        1
      </div>
    </div>
    <div
      class="t-col t-col-1"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        1
      </div>
    </div>
    <div
      class="t-col t-col-1"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        1
      </div>
    </div>
    <div
      class="t-col t-col-1"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        1
      </div>
    </div>
    <div
      class="t-col t-col-1"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        1
      </div>
    </div>
    <div
      class="t-col t-col-1"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        1
      </div>
    </div>
    <div
      class="t-col t-col-1"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        1
      </div>
    </div>
    <div
      class="t-col t-col-1"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        1
      </div>
    </div>
  </div>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        2
      </div>
    </div>
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        2
      </div>
    </div>
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        2
      </div>
    </div>
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        2
      </div>
    </div>
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        2
      </div>
    </div>
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        2
      </div>
    </div>
  </div>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-3"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        3
      </div>
    </div>
  </div>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-4"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        4
      </div>
    </div>
    <div
      class="t-col t-col-4"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        4
      </div>
    </div>
    <div
      class="t-col t-col-4"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        4
      </div>
    </div>
  </div>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-6"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        6
      </div>
    </div>
    <div
      class="t-col t-col-6"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        6
      </div>
    </div>
  </div>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-12"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        12
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`flex.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col"
      style="padding-left: 0px; padding-right: 0px; flex: 2 2 auto;"
    >
      <div>
        2 / 5
      </div>
    </div>
    <div
      class="t-col"
      style="padding-left: 0px; padding-right: 0px; flex: 3 3 auto;"
    >
      <div>
        3 / 5
      </div>
    </div>
  </div>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col"
      style="padding-left: 0px; padding-right: 0px; flex: 0 0 100px;"
    >
      <div>
        100px
      </div>
    </div>
    <div
      class="t-col"
      style="padding-left: 0px; padding-right: 0px; flex-basis: auto;"
    >
      <div>
        Fill Rest
      </div>
    </div>
  </div>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col"
      style="padding-left: 0px; padding-right: 0px; flex: 1 1 200px;"
    >
      <div>
        1 1 200px
      </div>
    </div>
    <div
      class="t-col"
      style="padding-left: 0px; padding-right: 0px; flex: 0 1 300px;"
    >
      <div>
        0 1 300px
      </div>
    </div>
  </div>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col"
      style="padding-left: 0px; padding-right: 0px; flex: 0 0 auto;"
    >
      <div
        style="padding: 0px 16px;"
      >
        none
      </div>
    </div>
    <div
      class="t-col"
      style="padding-left: 0px; padding-right: 0px; flex-basis: auto;"
    >
      <div>
        auto with no-wrap
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`gutter.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: -8px; margin-right: -8px;"
  >
    <div
      class="t-col t-col-3"
      style="padding-left: 8px; padding-right: 8px;"
    >
      <div>
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 8px; padding-right: 8px;"
    >
      <div>
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 8px; padding-right: 8px;"
    >
      <div>
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 8px; padding-right: 8px;"
    >
      <div>
        col-3
      </div>
    </div>
  </div>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: -12px; margin-right: -12px;"
  >
    <div
      class="t-col t-col-3"
      style="padding-left: 12px; padding-right: 12px;"
    >
      <div>
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 12px; padding-right: 12px;"
    >
      <div>
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 12px; padding-right: 12px;"
    >
      <div>
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 12px; padding-right: 12px;"
    >
      <div>
        col-3
      </div>
    </div>
  </div>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: -8px; margin-right: -8px; row-gap: 24px;"
  >
    <div
      class="t-col t-col-3"
      style="padding-left: 8px; padding-right: 8px;"
    >
      <div>
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 8px; padding-right: 8px;"
    >
      <div>
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 8px; padding-right: 8px;"
    >
      <div>
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 8px; padding-right: 8px;"
    >
      <div>
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 8px; padding-right: 8px;"
    >
      <div>
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 8px; padding-right: 8px;"
    >
      <div>
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 8px; padding-right: 8px;"
    >
      <div>
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 8px; padding-right: 8px;"
    >
      <div>
        col-3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`halign.jsx 1`] = `
<DocumentFragment>
  <p>
    align left
  </p>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-2
      </div>
    </div>
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-2
      </div>
    </div>
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-2
      </div>
    </div>
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-2
      </div>
    </div>
  </div>
  <p>
    align center
  </p>
  <div
    class="t-row t-row--center t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-2
      </div>
    </div>
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-2
      </div>
    </div>
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-2
      </div>
    </div>
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-2
      </div>
    </div>
  </div>
  <p>
    align right
  </p>
  <div
    class="t-row t-row--end t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-2
      </div>
    </div>
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-2
      </div>
    </div>
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-2
      </div>
    </div>
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-2
      </div>
    </div>
  </div>
  <p>
    space-between
  </p>
  <div
    class="t-row t-row--space-between t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-2
      </div>
    </div>
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-2
      </div>
    </div>
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-2
      </div>
    </div>
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-2
      </div>
    </div>
  </div>
  <p>
    space-around
  </p>
  <div
    class="t-row t-row--space-around t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-2
      </div>
    </div>
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-2
      </div>
    </div>
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-2
      </div>
    </div>
    <div
      class="t-col t-col-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-2
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`offset.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-4"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-4
      </div>
    </div>
    <div
      class="t-col t-col-4 t-col-offset-4"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-4
      </div>
    </div>
  </div>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-3 t-col-offset-3"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-3 col-offset-3
      </div>
    </div>
    <div
      class="t-col t-col-3 t-col-offset-3"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-3 col-offset-3
      </div>
    </div>
  </div>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-6 t-col-offset-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-6 col-offset-2
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`order.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    通过 \`order\` 来改变元素的排序。
  </div>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-3 t-col-order-4"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        1 col-order-4
      </div>
    </div>
    <div
      class="t-col t-col-3 t-col-order-3"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        2 col-order-3
      </div>
    </div>
    <div
      class="t-col t-col-3 t-col-order-2"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        3 col-order-2
      </div>
    </div>
    <div
      class="t-col t-col-3 t-col-order-1"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        4 col-order-1
      </div>
    </div>
  </div>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-3 t-col-xs-order-1 t-col-sm-order-2 t-col-md-order-3 t-col-lg-order-4"
      lg="[object Object]"
      md="[object Object]"
      sm="[object Object]"
      style="padding-left: 0px; padding-right: 0px;"
      xs="[object Object]"
    >
      <div>
        1 col-order-responsive
      </div>
    </div>
    <div
      class="t-col t-col-3 t-col-xs-order-2 t-col-sm-order-1 t-col-md-order-4 t-col-lg-order-3"
      lg="[object Object]"
      md="[object Object]"
      sm="[object Object]"
      style="padding-left: 0px; padding-right: 0px;"
      xs="[object Object]"
    >
      <div>
        2 col-order-responsive
      </div>
    </div>
    <div
      class="t-col t-col-3 t-col-xs-order-3 t-col-sm-order-4 t-col-md-order-2 t-col-lg-order-1"
      lg="[object Object]"
      md="[object Object]"
      sm="[object Object]"
      style="padding-left: 0px; padding-right: 0px;"
      xs="[object Object]"
    >
      <div>
        3 col-order-responsive
      </div>
    </div>
    <div
      class="t-col t-col-3 t-col-xs-order-4 t-col-sm-order-3 t-col-md-order-1 t-col-lg-order-2"
      lg="[object Object]"
      md="[object Object]"
      sm="[object Object]"
      style="padding-left: 0px; padding-right: 0px;"
      xs="[object Object]"
    >
      <div>
        4 col-order-responsive
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`responsive.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-xs-2 t-col-sm-4 t-col-md-6 t-col-lg-8 t-col-xl-10"
      lg="8"
      md="6"
      sm="4"
      style="padding-left: 0px; padding-right: 0px;"
      xl="10"
      xs="2"
    >
      <div>
        Col
      </div>
    </div>
    <div
      class="t-col t-col-xs-10 t-col-sm-8 t-col-md-6 t-col-lg-4 t-col-xl-2"
      lg="4"
      md="6"
      sm="8"
      style="padding-left: 0px; padding-right: 0px;"
      xl="2"
      xs="10"
    >
      <div>
        Col
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`sort.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    通过 \`pull\` \`push\` 进行排序
  </div>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-9 t-col-push-3"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-9 col-push-3
      </div>
    </div>
    <div
      class="t-col t-col-3 t-col-pull-9"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-3 col-pull-9
      </div>
    </div>
  </div>
  <div
    class="t-row t-row--start t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-8 t-col-push-4"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-8 col-push-4
      </div>
    </div>
    <div
      class="t-col t-col-4 t-col-pull-8"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div>
        col-4 col-pull-8
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`valign.jsx 1`] = `
<DocumentFragment>
  <p>
    align top
  </p>
  <div
    class="t-row t-row--center t-row--top"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-3"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div
        style="height: 80px;"
      >
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div
        style="height: 40px;"
      >
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div
        style="height: 80px;"
      >
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div
        style="height: 40px;"
      >
        col-3
      </div>
    </div>
  </div>
  <p>
    Align Middle
  </p>
  <div
    class="t-row t-row--space-around t-row--middle"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-3"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div
        style="height: 80px;"
      >
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div
        style="height: 40px;"
      >
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div
        style="height: 80px;"
      >
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div
        style="height: 40px;"
      >
        col-3
      </div>
    </div>
  </div>
  <p>
    Align Bottom
  </p>
  <div
    class="t-row t-row--space-between t-row--bottom"
    style="margin-left: 0px; margin-right: 0px;"
  >
    <div
      class="t-col t-col-3"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div
        style="height: 80px;"
      >
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div
        style="height: 40px;"
      >
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div
        style="height: 80px;"
      >
        col-3
      </div>
    </div>
    <div
      class="t-col t-col-3"
      style="padding-left: 0px; padding-right: 0px;"
    >
      <div
        style="height: 40px;"
      >
        col-3
      </div>
    </div>
  </div>
</DocumentFragment>
`;
